plugins {
    alias(libs.plugins.android.application)
}

android {
    namespace = 'com.test.networke2e'
    compileSdk {
        version = release(36)
    }

    defaultConfig {
        applicationId = "com.test.networke2e"
        minSdk = 24
        targetSdk = 36
        versionCode = 1
        versionName = "1.0"

        externalNativeBuild {
            cmake {
                cppFlags '-std=c++17'
            }
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }

    externalNativeBuild {
        cmake {
            path file('src/main/cpp/CMakeLists.txt')
            version '3.22.1'
        }
    }
}

dependencies {
    // OkHttp3 (okhttp3.*)
    implementation "com.squareup.okhttp3:okhttp:4.12.0"

    // Legacy OkHttp (okhttp.*)
    implementation "com.squareup.okhttp:okhttp:2.7.5"

    // Retrofit2
    implementation "com.squareup.retrofit2:retrofit:2.9.0"

    // Volley
    implementation "com.android.volley:volley:1.2.1"

    // Local WebSocket
    implementation 'org.java-websocket:Java-WebSocket:1.5.4'
}